--- a/404.html
+++ b/404.html
@@ -1,16 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Not Found</title>
-    <script>
-      // Redirect to index.html
-      window.location.href = '/FIT5032/'
-    </script>
+    <meta http-equiv="refresh" content="0; url=./index.html" />
   </head>
   <body>
-    <h1>Page Not Found</h1>
-    <p>The page you are looking for does not exist. Redirecting...</p>
+    <p>If you are not redirected, <a href="./index.html">click here</a>.</p>
   </body>
 </html>
