--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <meta http-equiv="refresh" content="0; url=/FIT5032/index.html" />
   </head>
   <body>
-    <p>If you are not redirected, <a href="./index.html">click here</a>.</p>
+    <p>If you are not redirected, <a href="/FIT5032/index.html">click here</a>.</p>
   </body>
 </html>
